chore: fix security issues, dead code, and modernize API usage
- Fix JSON injection in OsvClient by using Jakarta JSON-P builder
- Fix VersionComparator.isPreview false positive on "-m" (e.g. "-minimal")
- Fix unreachable AGPL check in AuditTui.getLicenseStyle
- Fix PomTui.selectedIndex to return -1 for consistency
- Remove dead code in AnalyzeTui.renderTable
- Replace inline FQCNs with imports in SearchTui/UpdatesTui
- Modernize instanceof to pattern matching in SearchTui
- Extract createSafeDocumentBuilder with full XXE protection
- Replace deprecated new URL() with URI.create().toURL()
- Replace .collect(Collectors.toList()) with .toList()
- Replace sb.length() > 0 with !sb.isEmpty()
- Add awaitTermination after shutdownNow in AuditTui/SearchTui/UpdatesTui

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>